--- a/wiki-app/index.html
+++ b/wiki-app/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <bc-app>Загрузка...</bc-app>
+  <ac-app>Загрузка...</ac-app>
 </body>
 </html>
