--- a/example-app/index.html
+++ b/example-app/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <bc-app>Loading...</bc-app>
+  <ac-app>Loading...</ac-app>
 </body>
 </html>
