--- a/wiki-app/index.html
+++ b/wiki-app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Book Collection</title>
+  <title>Шашки.Онлайн Вики</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
