--- a/wiki-app/index.html
+++ b/wiki-app/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Шашки.Онлайн Вики</title>
+  <title>Вики для шашиста</title>
   <base href="/">
+
+  <meta name="keywords" content="вики,статьи,шашки,онлайн,играть,бесплатно,игры,русские,социальные,сети,обучение,с другом,
+    по сети,на двоих,по интернету,через интернет,з другом,бесплатно,без регистрации">
+  <meta name="description" content="Наша миссия - сделать шашки доступными для обучения!">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
